tests/idris2/basic005/expected
1/1: Building NoInfer (NoInfer.idr)
Error: Unsolved holes:
Main.{_:1} introduced at: 
NoInfer.idr:1:7--1:8
   |
 1 | foo : ? -> Int
   |       ^

Main> Bye for now!
